# WebDevAPI

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: check.yml  pylint.yml
DJANGO_API_BLOG/: asgi.py  settings.py  urls.py
WebDevAPI/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20210704_1632.py  0003_auto_20210704_1646.py  0004_auto_20210704_1726.py
config/: settings.py  urls.py
core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
docker_django/: settings.py  urls.py
static/: app.js
templates/: index.html
