[tool.poetry]
name = "django-api-blog"
version = "0.1.0"
description = "rest api for blog"
authors = ["Roman Popov <i@romanpopoff.ru>"]
readme = "README.md"
packages = [{include = "django_api_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-rest-swagger = "^2.2.0"
flake8 = "^6.0.0"
django-debug-toolbar = "^3.8.1"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.5"
djoser = "^2.1.0"
validate-email = "^1.3"
mypy = "^1.2.0"
django-ckeditor = "^6.5.1"
pillow = "^9.5.0"
markdown = "^3.4.3"
serializers = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
